@@ -130,7 +130,6 @@ $pgv_lang["edit_add_child_help"]		= "~#pgv_lang[add_child]#~<br />Auf dieser Sei
 $pgv_lang["review_changes_help"]		= "~#pgv_lang[review_changes_block]#~<br />Dieser Block zeigt alle Datensätze die mit PhpGedView bearbeitet wurden und noch nicht in die Datenbank übernommen sind.<br /><br />";
 $pgv_lang["quick_update_name_help"] 	= "~#pgv_lang[update_name]#~<br />Diese Feldergruppe erleichtert das Ändern des Namens dieser Person.<br /><br />Ins «#factarray[GIVN]#» Feld geben Sie die Vornamen und ins «#factarray[SURN]#» Feld geben Sie den Nachnamen.  Zum Beispiel, die Bestandteile des Namens «John Robert Finlay» sind: <b>John Robert</b> (#factarray[GIVN]#); <b>Finlay</b> (#factarray[SURN]#)<br /><br />Ihre Eingaben <u>ändern</u> den Namen dieser Person; neue Namen werden hier <u>nicht</u> hinzugefügt. <i>Bitte beachten Sie: Falls der Name dieser Person wegen einer Ehe geändert wurde, soll der neue Ehename <u>nicht</u> auf dieser Seite eingegeben werden.</i><br /><br />";
 $pgv_lang["quick_update_fact_help"] 	= "~#pgv_lang[update_fact]#~<br />Diese Feldergruppe erlaubt Ihnen, bereits bestehende Ereignisse zu löschen oder zu bearbeiten oder neue Ereignisse zu diesem Datensatz hinzuzufügen.<br /><br />Das Bearbeiten der bereits bestehenden Ereignissen wird durch einfaches Ersetzen der angegebenen Daten bewirkt.  Neue Ereignisse erfordern die Wahl des Ereignisses aus der Liste und das Eingeben des Datums im normalen Format der Ahnenforschung (d.h. englisch wie zum Beispiel <b>1 JAN 2004</b>) und des Ortes.  Wenn Sie Hilfe beim Eingeben des Datums benötigen, können Sie den Kalender klicken.  Falls Sie einen bereits bekannten Ort eingeben möchten, können Sie das <b>#pgv_lang[find_place]#</b> Link benutzen.<br /><br />";
-$pgv_lang["quick_update_photo_help"]	= "~#pgv_lang[update_photo]#~<br />Diese Feldergruppe ermöglicht das Übertragen von Fotos dieser Person.  Ins «#factarray[TITL]#» Feld geben Sie beschreibenden Text.  (z.B. <b>Alfons Braun, 1890</b>)  Nachdem Sie den «Browse» Button klicken, können Sie Ihren lokalen Computer nach dem gewünschten Bild durchsuchen.  Falls schon ein Bild vorhanden ist, können Sie bestimmen ob das neue Bild das alte ersetzen soll, oder ob es hinzugefügt werden soll.  Wenn möglich und auch erlaubt, erstellt PhpGedView während des Übertragens automatisch das dazugehörende Miniaturbild.<br /><br />";
 $pgv_lang["quick_update_address_help"]	= "~#pgv_lang[update_address]#~<br />In dieser Feldergruppe können Sie die Adresse, Telefon- und Fax-Nummern, sowie die Mail-Adresse dieser Person hinzufügen oder ändern.  Änderungen bewirklichen Sie durch das Ersetzen der bestehenden Daten.  Falls Sie Daten löschen möchten, müssen Sie die gewünschten Felder leeren.<br /><br />";
 $pgv_lang["quick_update_spouse_help"]	= "~Neuen Ehepartner hinzufügen~<br />Dise Feldergruppe wird benutzt, wenn Sie einen neuen Ehepartner an diese Person anschließen möchten.<br /><br />Sie geben den Namen und die Geburtsdaten in die entsprechenden Felder ein.  Daten über die Ehe werden in deren entsprechende Felder eingegeben.<br /><br />Bitte beachten Sie dass Daten immer im der Ahnenforschung üblichen Format eingegeben werden sollen.  (D.h., englische Monatsabkürzung, wie zum Beispiel <b>1 JAN 2004</b>.)  Für Hilfe beim Eingeben von Daten können Sie das Kalenderikon klicken.  Falls Sie einen Ort eingeben möchten, der bereits der Datenbank bekannt ist, können Sie das <b>#pgv_lang[find_place]#</b> Link benutzen.<br /><br />Diese Felder können nur für das Eingeben von <i>neuen</i> Ehepartnern benutzt werden.  Daten über bereits bestehende Partner können hier nicht bearbeitet werden.  Für diesen Zweck müssen Sie dieses Fenster schließen und dann den #pgv_lang[relatives]# Ordner klicken. Danach können Sie das entsprechende Menü klicken.<br /><br />";
 $pgv_lang["quick_update_marriage_help"]	= "~Ehe bearbeiten~<br />Sie können diese Felder, zusammen mit den Feldern der Gruppe «Neuen Ehepartner hinzufügen» benutzen, die Daten einer bisher unbekannten Ehe einzugeben.  Falls Sie nur Ehedaten eingeben ohne auch gleichzeiting einen neuen Ehepartner hinzuzufügen, werden die Daten der <i>letzten</i> Ehe geändert.<br /><br />Bitte beachten Sie dass Daten immer im der Ahnenforschung üblichen Format eingegeben werden sollen.  (D.h., englische Monatsabkürzung, wie zum Beispiel <b>1 JAN 2004</b>.)  Für Hilfe beim Eingeben von Daten können Sie das Kalenderikon klicken.  Falls Sie einen Ort eingeben möchten, der bereits der Datenbank bekannt ist, können Sie das <b>#pgv_lang[find_place]#</b> Link benutzen.<br /><br />";
