@@ -127,7 +127,6 @@ $pgv_lang["edit_add_child_help"]	= "~#pgv_lang[add_child]#~<br /><br />With this
 $pgv_lang["review_changes_help"]	= "~UNACCEPTED CHANGES~<br /><br />This block will list all of the records that have been changed online and that still need to be reviewed and accepted into the database.<br /><br />";
 $pgv_lang["quick_update_name_help"] = "~UPDATE NAME~<br /><br />Use the \"Update Name\" fields to change the name of the person you are editing.  In the Given Names field enter the person's given or first names.  In the Surname field enter the person's last or surname.  For example, if the name you want to enter is \"John Robert Finlay\" then you would enter \"John Robert\" in the Given Name field and \"Finlay\" in the Surname field.<br /><br />Filling out these fields will <u>change</u> the name of the person; it will not add a new name.<br /><br /><i>Note: you should <u>not</u> use this method if the name changes due to a new marriage.  Instead, use the options to add a new husband below.</i><br /><br />";
 $pgv_lang["quick_update_fact_help"] = "~UPDATE A FACT~<br /><br />Use the \"Update Fact\" fields to add new fact information or change an existing fact for the record you are editing.  First choose a fact from the drop-down list.  Then enter the date when that fact occurred in the standard date format for genealogy (1 JAN 2004).  You can click on the Calendar icon for help selecting a date.  Then enter the place when that fact occurred.  You can use the <b>#pgv_lang[find_place]#</b> link to select a place that already exists in the database.<br /><br />As with all the other fields on this form, your information will either replace what is already there or it will create new entries as required.<br /><br />";
-$pgv_lang["quick_update_photo_help"] = "~UPDATE PHOTO~<br /><br />Use the \"Update Photo\" fields to upload a picture of the person you are editing.  In the Title field enter a descriptive title for the picture, something like \"John Finlay 2004\".  Then click the <b>Browse</b> button to search for the picture on your computer.  If the person you are editing already has a picture, a checkbox will let you determine whether you want the picture added or if you want to replace the old one.<br /><br />";
 $pgv_lang["quick_update_address_help"] = "~UPDATE ADDRESS~<br /><br />Use the \"Update Address\" fields to change the address, telephone number, or email address of the person you are editing.<br /><br />As with all the other fields on this form, your information will either replace what is already there or it will create new entries as required.<br /><br />";
 $pgv_lang["quick_update_spouse_help"] = "~ADD A NEW HUSBAND OR WIFE~<br /><br />Use these fields when you want to add a new husband or wife to the person you are editing.  Enter the new spouse's name and birth information into the fields and then enter the date they were married under the marriage information.  Enter dates in the standard date format for genealogy (1 JAN 2004).  You can click on the Calendar icon for help selecting a date.  You can use the <b>#pgv_lang[find_place]#</b> link to select a place that already exists in the database.<br /><br />These fields will only add a <i>new</i> partner; they will not update the information of an old one.  To edit the information of someone who is already recorded, close this window and click on that person's name in the #pgv_lang[relatives]# tab.  Then click on the Edit Individual menu to edit the information.<br /><br />";
 $pgv_lang["quick_update_marriage_help"] = "~UPDATE MARRIAGE~<br /><br />You can use these fields along with the fields to add a new husband or wife if you want to record a new marriage.  Otherwise entering data in these fields will change information about the person's last marriage.  Enter dates in the standard date format for genealogy (1 JAN 2004).  You can click on the Calendar icon for help selecting a date.  You can use the <b>#pgv_lang[find_place]#</b> link to select a place that already exists in the database.<br /><br />";
